Fix minor issue to make sure it works with JDK 1.6